everything but quizzes

--- a/browser/js/authorized/profile/profile.html
+++ b/browser/js/authorized/profile/profile.html
@@ -1,6 +1,6 @@
 <!-- Page Content -->
 <div class="breadcrumbs container">
-    <a href="index.html">Home</a> <i class="fa fa-angle-right"></i> <a class="current">{{user.name}}</a>
+    <a ui-sref="dashboard">Dashboard</a> <i class="fa fa-angle-right"></i> <a class="current">{{user.firstName}} {{user.lastName}}</a>
 </div>
 <button ng-click="addCredits()">test</button>
 <!-- /.search-section -->
