--- a/browser/js/authorized/students/aside.html
+++ b/browser/js/authorized/students/aside.html
@@ -19,10 +19,10 @@
         </span>
         <span href class="dropdown-toggle hidden-folded no-border" dropdown-toggle>
           <span class="clear">
-            <span class="block user-pro-name">{{user.name}}</span>
+            <span class="block user-pro-name">{{user.firstName}} {{user.lastName}}</span>
           </span>
           <span class="clear">
-            <span class="block user-pro-name">{{user.credits}}</span>
+            <span class="block user-pro-name">{{user.credits || 0}} Credits Available</span>
           </span>
         </span>
       </span>
@@ -55,19 +55,19 @@
             <span class="font-bold">My Courses</span>
         </a>
         <ul class="nav nav-sub dk">
-<!--             <li ui-sref-active="active">
+            <li ui-sref-active="active" ui-sref="myCourses">
                 <a>
-                    <span>Upcoming Classes</span>
+                    <span>My Classes</span>
                 </a>
-            </li> -->
+            </li>
            <!--  <li ui-sref-active="active">
                 <a>
                     <span>Assignments Due</span>
                 </a>
             </li> -->
             <li ui-sref-active="active">
-                <a ui-sref="app.quizmanager">
-                    <span>My Quizzes</span>
+                <a ui-sref="myAssignments">
+                    <span>My Assignments</span>
                 </a>
             </li>
            <!--  <li ui-sref-active="active">
