--- a/browser/js/authorized/myCourses/myCourses.html
+++ b/browser/js/authorized/myCourses/myCourses.html
@@ -23,7 +23,7 @@
                                    <!--  <span class="reltd-title">Lorem ipsum dolor sit amet, consectetur adipiscing</span> -->
                                 </div>
                             </div>
-                            <div class="info-btn">
+                            <div class="info-btn" ng-if="teacher">
                                 <a class="outlined-btn red-btn cancel-payroll" ui-sref="newClassroom">+ New Course</a>
                             </div>
                         </div>
