--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -94,7 +94,7 @@
                                         <hr class="bold-hr" />
                                     </div>
                                     <div class="innercont clearfix m-b-10a">
-                                        <a href="" class="thumb-lg pull-left m-r"><img src="img/a8.jpg" class="img-circle"></a>
+                                        <a href="" class="thumb-lg pull-left m-r"><img src="classroom.profilePic" class="img-circle"></a>
                                         <div class="instructor-info reltd-title">
                                             <div class="trname">{{classroom.firstName}} {{classroom.lastName}}</div>
                                             <div class="trexp">{{classroom.teacher_title}}</div>
@@ -105,12 +105,7 @@
                                     </div>
                                     <div class="instr-bio">
                                         <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                        {{classroom.teacher_bio}}
                                         </p>
                                     </div>
                                 </div>
@@ -149,11 +144,11 @@
                         <!--whiteboard end-->
 
                         <!-- Calender -->
-                        <div class="mar-btm-30">
+<!--                         <div class="mar-btm-30">
                             <div class="outlined clearfix classroom-cal">
                                 <div id="calendar"></div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- / Calender end-->
 
                         <!--Teacher Notes Start-->
@@ -187,10 +182,10 @@
         </div>
         <!-- /column -->
     </div>
-    <div class="col w-lg lter b-l bg-auto chat-area">
+    <!-- <div class="col w-lg lter b-l bg-auto chat-area">
         <div class="online-tit pad-20 light-text">ONLINE</div>
         <div class="teacher-ct text-center">
-            <span class="thumb-lg m-b-10a"><img src="img/a8.jpg" class="img-circle"></span>
+            <span class="thumb-lg m-b-10a"><img src="" class="img-circle"></span>
             <div class="secondery-title">{{user.name}}</div>
         </div>
         <ul class="online-stud-list">
@@ -201,6 +196,6 @@
                 </a>
             </li>
         </ul>
-    </div>
+    </div> -->
 </div>
 <!-- /hbox layout -->
