--- a/browser/js/authorized/profile/editProfile.html
+++ b/browser/js/authorized/profile/editProfile.html
@@ -38,8 +38,8 @@
                                                 <div class="form-group mar-20">
                                                     <label class="col-sm-2 control-label">Avatar</label>
                                                     <div class="col-sm-8">
-                                                        <div class="user-thumb"><img src="img/a7.jpg" title="John Doe" alt="John Doe" /></div>
-                                                        <button ng-click="changeProfilePic()" type="file" ngf-select="changeProfilePic($file)" accept="image/*" ng-f-max-height="1000" ngf-max-size="2mb" class="change-pro slim-btn outlined-btn gray-btn float-rt">Change</button>
+                                                        <div class="user-thumb"><img src="user.profilePic" title="John Doe" alt="John Doe" /></div>
+                                                        <button type="file" ngf-select="changeProfilePic($file)" accept="image/*" ng-f-max-height="1000" ngf-max-size="2mb" class="change-pro slim-btn outlined-btn gray-btn float-rt">Change</button>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
@@ -64,7 +64,7 @@
                                                 <div class="form-group" ng-show="user.role!=1">
                                                     <label class="col-sm-2 control-label">Grade Level</label>
                                                     <div class="col-sm-8">
-                                                        <input type="text" class="form-control" placeholder="Highest Grade Level">
+                                                        <input type="text" class="form-control" placeholder="Highest Grade Level" ng-model="user.grade">
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
@@ -166,38 +166,14 @@
                                                     </div>
                                                 </div>
                                                 <br>
-<!--                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">Class Time Preference</label>
-                                                    <div class="col-sm-8">
-                                                        <div class="row">
-                                                            <div class="col-sm-3 checkbox">
-                                                                <label class="i-checks">
-                                                                    <input type="radio" value="">
-                                                                    <i></i> AM
-                                                                </label>
-                                                            </div>
-                                                            <div class="col-sm-3 checkbox">
-                                                                <label class="i-checks">
-                                                                    <input type="radio" value="">
-                                                                    <i></i> PM
-                                                                </label>
-                                                            </div>
-                                                            <div class="col-sm-3 checkbox">
-                                                                <label class="i-checks">
-                                                                    <input type="radio" checked="" value="">
-                                                                    <i></i> Both
-                                                                </label>
-                                                            </div>
+                                                <div class="form-group">
+                                                    <div class="row" ng-show="teacher">
+                                                        <label class="col-sm-2 control-label">Your Bio</label>
+                                                        <div class="col-sm-8">
+                                                            <textarea ng-model="user.teacherOptions.bio"></textarea>
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <br> -->
-<!--                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">Change Password</label>
-                                                    <div class="col-sm-8">
-                                                        <input type="password" class="form-control" placeholder="Password">
-                                                    </div>
-                                                </div> -->
                                                 <div class="form-group mar-btm-30">
                                                     <label class="col-sm-2 control-label"></label>
                                                     <div class="col-sm-8">
@@ -352,7 +328,7 @@
                                         $('.add-paroll-method').hide();
                                     });
                                     </script>
-                                    <div class="tab-pane" id="tab-3">
+                                    <div class="tab-pane" id="tab-3" ng-if="teacher">
                                         <div class="wrapper-md">
                                             Credentials
                                         </div>
