--- a/browser/js/common/directives/defaultNav/authorizedNav.html
+++ b/browser/js/common/directives/defaultNav/authorizedNav.html
@@ -24,7 +24,6 @@
                     <li class="call-li"> <img src="img/call.png" alt="call" title="call"> <span>Call Us +888 234 5678</span></li>
                     <li><a ui-sref="app.dashboard">Dashboard</a></li>
                     <li><a href="">Moderators</a></li>
-                    <li><a href="">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -47,7 +46,6 @@
                 <span class="visible-xs-inline">Notifications</span>
                 <span class="badge badge-sm up bg-danger pull-right-xs">2</span>
             </a>
-            <!-- dropdown -->
             <div class="dropdown-menu w-xl">
                 <div class="panel bg-white">
                     <div class="panel-footer text-sm clearfix">
@@ -102,7 +100,6 @@
                     </div>
                 </div>
             </div>
-            <!-- / dropdown -->
         </li>
         <li class="dropdown" dropdown>
             <a href class="dropdown-toggle icons-info" dropdown-toggle>
@@ -110,7 +107,6 @@
                 <span class="visible-xs-inline">Notifications</span>
                 <span class="badge badge-sm up bg-danger pull-right-xs">2</span>
             </a>
-            <!-- dropdown -->
             <div class="dropdown-menu w-xl">
                 <div class="panel bg-white">
                     <div class="list-group">
@@ -131,17 +127,15 @@
                     </div>
                 </div>
             </div>
-            <!-- / dropdown -->
         </li>
         <li class="dropdown profile-li" >
             <a href class="dropdown-toggle clear profile-icon" toggle-parent-class="open">
-                <span class="profile-user"><span class="hidden-sm hidden-md">John.Smith </span><b class="caret"></b></span>
+                <span class="profile-user"><span class="hidden-sm hidden-md">{{user.firstName}} {{user.lastName}} </span><b class="caret"></b></span>
                 <span class="thumb-sm avatar  m-t-n-sm m-b-n-sm m-l-sm">
-                <img src="img/a0.jpg" alt="...">
+                <img src="{{user.profilePic}}" alt="...">
               </span>
                 <span class=" fa fa-angle-down"></span>
             </a>
-            <!-- dropdown -->
             <ul class="dropdown-menu">
                 <li>
                     <a href>
@@ -158,11 +152,7 @@
                     </a>
                 </li>
                 <li class="divider"></li>
-                <li>
-                    <a ui-sref="access.signin">Logout</a>
-                </li>
             </ul>
-            <!-- / dropdown -->
         </li>
     </ul>
     <!-- / navbar right -->
