--- a/browser/js/authorized/profile/profile.html
+++ b/browser/js/authorized/profile/profile.html
@@ -1,6 +1,13 @@
-<!-- Page Content -->
-<div class="breadcrumbs container">
-    <a ui-sref="dashboard">Dashboard</a> <i class="fa fa-angle-right"></i> <a class="current">{{user.firstName}} {{user.lastName}}</a>
-</div>
+<div class="content-wrapper">
+	<!-- Page Content -->
+<div class=" lter wrapper-md bredcrumb">
+                <div class="row">
+                    <div class="col-sm-6 col-xs-12">
+                        <a ui-sref="dashboard"><small class="text-muted">Dashboard</small></a> <i class="fa fa-angle-right"></i> <small class="text-muted">{{user.firstName}} {{user.lastName}}</small>
+                    </div>
+                </div>
+            </div>
 <!-- /.search-section -->
+</div>
+
 <ng-include src="templateUrl()"></ng-include>
