--- a/browser/js/unauthorized/teacherList/teacherList.html
+++ b/browser/js/unauthorized/teacherList/teacherList.html
@@ -12,124 +12,21 @@
     <div class="container">
         <div class="courseli-wrap">
             <div class="row">
-                <div class="col-md-4 col-xs-6 teacher-pro">
+                <div class="col-md-4 col-xs-6 teacher-pro" ng-repeat="teacher in teachers">
                     <div class="row">
                         <div class="col-md-5 col-sm-5 full-img">
-                            <a href="teacher-detail.html" class="event-img"><img src="img/teacher1.jpg" alt="Course Image" /></a>
+                            <a href="teacher-detail.html" class="event-img"><img ng-src="{{teacher.profilePic}}" alt="Course Image" /></a>
                         </div>
                         <div class="col-md-7 col-sm-7">
-                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">James Anderson</h3></a>
-                            <p class="g-t t-pro">Chemistry Professor</p>
+                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">{{teacher.firstName}} {{teacher.lastName}}</h3></a>
+                            <p class="g-t t-pro">{{teaher.title}}</p>
                             <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">5</span></p>
-                            <p class="t-email">Email me at <strong> james@gmail.com</strong></p>
+                            <p class="t-email">Email me at <strong> {{teacher.email}}</strong></p>
                         </div>
                         <div class="clearfix"></div>
                         <div class="col-md-12">
-                            <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt.</p>
-                            <p class="block-des"><a href="">Read More <img src="img/read-more.png" alt=">" /></a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-xs-6 teacher-pro">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-5 full-img">
-                            <a href="teacher-detail.html" class="event-img"><img src="img/teacher2.jpg" alt="Course Image" /></a>
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">James Anderson</h3></a>
-                            <p class="g-t t-pro">Chemistry Professor</p>
-                            <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">7</span></p>
-                            <p class="t-email">Email me at <strong> james@gmail.com</strong></p>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-12">
-                            <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt.</p>
-                            <p class="block-des"><a href="">Read More <img src="img/read-more.png" alt=">" /></a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-xs-6 teacher-pro">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-5 full-img">
-                            <a href="teacher-detail.html" class="event-img"><img src="img/teacher3.jpg" alt="Course Image" /></a>
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">James Anderson</h3></a>
-                            <p class="g-t t-pro">Chemistry Professor</p>
-                            <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">10</span></p>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-12">
-                            <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt.</p>
-                            <p class="block-des"><a href="">Read More <img src="img/read-more.png" alt=">" /></a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-xs-6 teacher-pro">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-5 full-img">
-                            <a href="teacher-detail.html" class="event-img"><img src="img/teacher4.jpg" alt="Course Image" /></a>
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">James Anderson</h3></a>
-                            <p class="g-t t-pro">Chemistry Professor</p>
-                            <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">5</span></p>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-12">
-                            <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt.</p>
-                            <p class="block-des"><a href="">Read More <img src="img/read-more.png" alt=">" /></a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-xs-6 teacher-pro">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-5 full-img">
-                            <a href="teacher-detail.html" class="event-img"><img src="img/teacher5.jpg" alt="Course Image" /></a>
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">James Anderson</h3></a>
-                            <p class="g-t t-pro">Chemistry Professor</p>
-                            <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">5</span></p>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-12">
-                            <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt.</p>
-                            <p class="block-des"><a href="">Read More <img src="img/read-more.png" alt=">" /></a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-xs-6 teacher-pro">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-5 full-img">
-                            <a href="teacher-detail.html" class="event-img"><img src="img/teacher6.jpg" alt="Course Image" /></a>
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">James Anderson</h3></a>
-                            <p class="g-t t-pro">Chemistry Professor</p>
-                            <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">10</span></p>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-12">
-                            <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt.</p>
-                            <p class="block-des"><a href="">Read More <img src="img/read-more.png" alt=">" /></a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-xs-6 teacher-pro">
-                    <div class="row">
-                        <div class="col-md-5 col-sm-5 full-img">
-                            <a href="teacher-detail.html" class="event-img"><img src="img/teacher7.jpg" alt="Course Image" /></a>
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <a href="teacher-detail.html" class="event-tit"><h3 class="second-tit m-b-0">James Anderson</h3></a>
-                            <p class="g-t t-pro">Chemistry Professor</p>
-                            <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">10</span></p>
-                        </div>
-                        <div class="clearfix"></div>
-                        <div class="col-md-12">
-                            <p class="block-des">Lorem ipsum dolor sit amet, consectetur eiusmod tempor incididunt.</p>
-                            <p class="block-des"><a href="">Read More <img src="img/read-more.png" alt=">" /></a></p>
+                            <p class="block-des">{{teacher.teacherOptions.bio}}</p>
+                            <p class="block-des"><a ng-click="transition(teacher.id)">Read More <img src="img/read-more.png" alt=">" /></a></p>
                         </div>
                     </div>
                 </div>
