--- a/browser/js/unauthorized/teacherDetail/teacherDetail.html
+++ b/browser/js/unauthorized/teacherDetail/teacherDetail.html
@@ -50,7 +50,7 @@
                         <span class="col-md-9">
                             <p>{{teacher.teacherOptions.bio}}</p>
                             <p>
-                                <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">{{classrooms.length}}</span></p>
+                                <p class="t-phone"><i class="fa fa-mortar-board"></i> Courses <span class="course-count">{{classes.length}}</span></p>
                         </p>
                         <p class="trsocial">
 <!--                             <a href="" target="_blank"><i class="fa fa-facebook"></i></a>
