welp here we go lol

--- a/browser/js/authorized/dashboard/teacher.html
+++ b/browser/js/authorized/dashboard/teacher.html
@@ -16,7 +16,7 @@
                     <div class="outlined pad-20 info-bar clearfix gray-bg left-bar">
                         <div class="icon-cc"><span><img src="img/credit-card.png" alt="CC" title="CC" /></span></div>
                         <div class="info-wrap"><span class="info-text">Your subscription ends on <strong>March 31, 2017</strong></span></div>
-                        <div class="info-btn"><a href="" class="fill-btn">Upgrade</a></div>
+                        <div class="info-btn"><a href="" class="fill-btn">Level: Basic</a></div>
                     </div>
                 </div>
             </div>
