--- a/browser/js/common/directives/whiteboard/whiteboard.html
+++ b/browser/js/common/directives/whiteboard/whiteboard.html
@@ -1,6 +1,8 @@
-<div id="color-selector">
-    <div class="marker selected" id="black"></div>
-</div>
-<div id="sketch">
-    <canvas id="paint"></canvas>
+<div id="whiteboard">
+	<div id="color-selector">
+	    <div class="marker selected" id="black"></div>
+	</div>
+	<div id="sketch">
+	    <canvas id="paint"></canvas>
+	</div>
 </div>
