--- a/browser/js/authorized/myCourses/myCourses.html
+++ b/browser/js/authorized/myCourses/myCourses.html
@@ -53,7 +53,7 @@
                 <!-- Quiz Listing start -->
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-6 quiz-block mar-btm-30" ng-repeat = "class in classrooms">
-                        <img src="img/quiz-thumnail.jpg" alt="Quiz" title="Quiz">
+                        <img src="img/course2.jpg" alt="Course" title="Course">
                         <div class="outlined pad-20">
                             <div class="activity-title">{{class.title}}<i class="fa fa-check-circle geen-text pull-right"></i>
                                 <br>
